tests/errors/poisoning/namespace-as-value.fn
---
Description: Namespace used directly as a value
Expected: compile error
---

namespace Math
{
    type Vector2
    {
        init{}
    }
}

type Program
{
    fn Main -> i32
    {
        var x = Math
        return 0
    }
}
